fix letter-spacing

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -180,7 +180,7 @@ footer {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.18;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     text-align: center;
   }
 }
